# 7-Divan

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
divan/: __init__.py  advisor.py  advisor_selector.py  attachments.py  cli.py  config.py  context.py  display.py  engine.py  export.py  memory.py  models.py  session.py  synthesis.py  templates.py  tui.py
divan/tools/: __init__.py  base.py
docs/: ROADMAP.md
personas/: bas_vezir.md  contrarian.md  customer.md  defterdar.md  operator.md  visionary.md
templates/: career.yaml  startup.yaml  technical.yaml
tests/: test_advisor_creator.py  test_context.py  test_engine.py  test_export.py  test_memory.py  test_session.py  test_tools.py
